Fix label text wrapping

--- a/css/modals/invite/_info.scss
+++ b/css/modals/invite/_info.scss
@@ -24,6 +24,7 @@
 
     .info-label {
         font-weight: bold;
+        white-space: nowrap;
     }
 
     .info-password-field {
